fix: input and button mobile style

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -31,3 +31,9 @@
     box-shadow: unset;
   }
 }
+
+@media (max-width: 400px) {
+  .Button {
+    width: 100%;
+  }
+}
